- mc26.1 parity